--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
+    "tailwind-gradient-mask-image": "^1.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
