--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.468.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.0",
     "tailwind-gradient-mask-image": "^1.2.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
