--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
@@ -20,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.15.0",
+    "supabase": "^2.1.1",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
